--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sb-rollup-typescript-library-template",
+  "name": "primer-react-aria-datepicker",
   "version": "0.0.0",
   "author": "Matt Oliver",
   "license": "MIT",
@@ -58,16 +58,16 @@
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-visualizer": "5.5.2",
     "size-limit": "^7.0.8",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "react": "^17.0.2 || 18.2.0",
-    "react-dom": "^17.0.2 || 18.2.0"
+    "react-dom": "^17.0.2 || 18.2.0",
+    "styled-components": "4.x || 5.x"
   },
   "dependencies": {
-    "@radix-ui/react-polymorphic": "^0.0.14",
-    "@radix-ui/react-popover": "1.0.0",
-    "@stitches/react": "^1.2.8",
+    "@types/styled-components": "^5.1.25",
     "classnames": "^2.3.1"
   },
   "files": [
