--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "styled-components": "4.x || 5.x"
   },
   "dependencies": {
+    "@primer/react": "^35.5.0",
     "@types/styled-components": "^5.1.25",
     "classnames": "^2.3.1",
     "react-aria": "^3.18.0"
