--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@changesets/changelog-github": "^0.4.6",
     "@changesets/cli": "^2.24.0",
+    "@react-types/datepicker": "^3.1.0",
     "@rollup/plugin-commonjs": "19.0.2",
     "@rollup/plugin-node-resolve": "13.0.5",
     "@size-limit/preset-big-lib": "^7.0.8",
