--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "styled-components": "4.x || 5.x"
   },
   "dependencies": {
+    "@primer/octicons-react": "^17.4.0",
     "@primer/react": "^35.5.0",
     "@types/styled-components": "^5.1.25",
     "classnames": "^2.3.1",
